--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             </intent-filter>
         </activity>
 
+        <!--For foreground location service setup-->
+        <service android:name=".service.TrackingService"
+            android:foregroundServiceType="location"/>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
